package com.github.jameshnsears.chance.ui.dialog.settings

class DialogSettingsTestTag {
    companion object {
        const val SETTINGS_TIME = "SETTINGS_TIME"
        const val SETTINGS_SCORE = "SETTINGS_SCORE"
        const val SETTINGS_SCORE_TTS = "SETTINGS_SCORE_TTS"

        const val SETTINGS_DICE_TITLE = "SETTINGS_DICE_TITLE"
        const val SETTINGS_SIDE_NUMBER = "SETTINGS_SIDE_NUMBER"
        const val SETTINGS_SIDE_DESCRIPTION = "SETTINGS_SIDE_DESCRIPTION"
        const val SETTINGS_SIDE_SVG = "SETTINGS_SIDE_SVG"
...
