package com.github.jameshnsears.chance.ui.zoom.rolls

class ZoomRollsTestTag {
    companion object {
        const val LAZY_COLUMN = "LAZY_COLUMN"
        const val LAZY_COLUMN_EMPTY = "LAZY_COLUMN_EMPTY"
        const val LAZY_COLUMN_NOT_EMPTY = "LAZY_COLUMN_NOT_EMPTY"
        const val ROLL_LOCK = "ROLL_LOCK"
    }
}
